Added basic routing

--- a/src/components/Main/ArticlesBrowser/ArticlesBrowser.module.css
+++ b/src/components/Main/ArticlesBrowser/ArticlesBrowser.module.css
@@ -12,6 +12,16 @@
     display: block;
 }
 
+.contentTable tr:nth-of-type(2n) {
+    background-color: rgb(255, 255, 255);
+    border-right: 5px solid lightgray;
+}
+
+.contentTable tr:nth-of-type(odd) {
+    background-color: rgb(240, 255, 240);
+    border-left: 5px solid rgb(79, 190, 29);
+}
+
 .contentTable .articleHeader{
     font-size: 1.3rem;
     color: #3a3d40;
@@ -62,6 +72,21 @@
     cursor: pointer;
     color: white;
     font-weight: 600;
+}
+
+.browserTabs{
+    margin-top: 2rem;
+    justify-content: center;
+    display: flex;
+    border-bottom: 2px solid#4fbe1d;
+}
+
+.browserTabs a{
+    color: #3a3d40;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-top-right-radius: 0.5rem;
+    border-top-left-radius: 0.5rem;
 }
 
 @media screen and (max-width: 768px) {
