--- a/src/components/Main/ArticlesBrowser/ArticlesBrowser.module.css
+++ b/src/components/Main/ArticlesBrowser/ArticlesBrowser.module.css
@@ -46,6 +46,7 @@
     margin-bottom: -0.2rem;
     border-top-right-radius: 1rem;
     border-bottom-left-radius: 1rem;
+    border: 1px solid rgb(79, 190, 29);
 }
 
 .articleDescription{
