--- a/src/components/UserOps/Profile/Profile.module.css
+++ b/src/components/UserOps/Profile/Profile.module.css
@@ -14,7 +14,7 @@
     width: 30%;
     float: left;
     margin: 0 1rem 1rem 0;
-    border-bottom: 6px solid #4fbe1d;;
+    border-bottom: 6px solid #4fbe1d;
 }
 
 .userInfo p{
