Added mobile UI fixes

--- a/src/components/Main/ArticlesBrowser/ArticlesBrowser.module.css
+++ b/src/components/Main/ArticlesBrowser/ArticlesBrowser.module.css
@@ -136,10 +136,13 @@
 }
 
 @media screen and (max-width: 768px) {
-.articleControlsItem {
-    flex: none;
-    width: calc(50% - 10px);
-}
+    .articleControlsItem {
+        flex: none;
+        width: calc(50% - 10px);
+    }
+    .headImg{
+        width: 60%;
+    }
 }
 
 @media screen and (max-width: 480px) {
